--- a/static/assets/css/addition.css
+++ b/static/assets/css/addition.css
@@ -16,8 +16,8 @@
         background-image: url("../../images/bg.jpg");
         background-size: 150%;
         background-position: 50% 25%;
-        background-repeat: repeat,								no-repeat,													no-repeat;
-        background-attachment: fixed,								fixed,														scroll;
+        background-repeat: no-repeat,								no-repeat,													no-repeat;
+        background-attachment: scroll,								scroll,														scroll;
         z-index: -1;
         box-shadow: 5px 7px 10px rgba(200,200,200,0.5);
 		}
