--- a/static/assets/css/addition.css
+++ b/static/assets/css/addition.css
@@ -22,6 +22,13 @@
         box-shadow: 5px 7px 10px rgba(200,200,200,0.5);
 		}
 
+@media (max-width: 768px) {
+    #banner {
+        background-attachment: scroll;
+	background-size: 300%;
+	background-position: center;
+    }
+}
 
 .linkage{
     text-decoration: none;
