--- a/static/assets/css/addition.css
+++ b/static/assets/css/addition.css
@@ -25,8 +25,8 @@
 @media (max-width: 768px) {
     #banner {
         background-attachment: scroll;
-	background-size: 300%;
-	background-position: center;
+	background-size: 200%;
+	background-position: 50% 25%;
     }
 }
 
