--- a/static/assets/css/addition.css
+++ b/static/assets/css/addition.css
@@ -17,7 +17,7 @@
         background-size: 150%;
         background-position: 50% 25%;
         background-repeat: no-repeat,								no-repeat,													no-repeat;
-        background-attachment: scroll,								scroll,														scroll;
+        background-attachment: fixed,								fixed,														fixed;
         z-index: -1;
         box-shadow: 5px 7px 10px rgba(200,200,200,0.5);
 		}
