--- a/static/assets/css/addition.css
+++ b/static/assets/css/addition.css
@@ -17,14 +17,14 @@
         background-size: 150%;
         background-position: 50% 25%;
         background-repeat: no-repeat,								no-repeat,													no-repeat;
-        background-attachment: scroll,								scroll,														scroll;
+        background-attachment: fixed,								fixed,														fixed;
         z-index: -1;
         box-shadow: 5px 7px 10px rgba(200,200,200,0.5);
 		}
 
 @media (max-width: 768px) {
     #banner {
-        background-attachment: fixed;
+        background-attachment: scroll;
 	background-size: 200%;
 	background-position: 50% 40%;
     }
